Edited TMUX background

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
-set -g status-style 'bg=#1A1B26 fg=#5eacd3'
+set -g status-style 'bg=#1d2028 fg=#5eacd3'
 bind r source-file ~/.tmux.conf
 
 
