--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,6 @@
 hide_window_decorations titlebar-only
-background #1a1c26
+#background #1a1c26
+background #1d2028
 font_family Liga SFMono Nerd Font
 font_size 17.0
 
