--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,13 @@
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 set -g status-style 'bg=#1d2028 fg=#5eacd3'
-bind r source-file ~/.tmux.conf
 
+setw -g mode-keys vi
+bind Enter copy-mode
+bind -n M-Enter copy-mode
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 bind -r ^ last-window
 bind -r k select-pane -U
@@ -12,5 +17,3 @@ bind -r l select-pane -R
 
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a send-prefix
-bind r source-file ~/.tmux.conf
