Changed Kitty Font to Jetbrains Mono Nerdfont

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,7 +1,7 @@
 hide_window_decorations titlebar-only
 #background #1a1c26
 background #1d2028
-font_family Liga SFMono Nerd Font
+font_family FiraCode Nerd Font
 font_size 25.0
 
 foreground #a9b1d6
