Added Trouble and FTerm

--- a/kitty.conf
+++ b/kitty.conf
@@ -3,7 +3,8 @@ hide_window_decorations titlebar-only
 background #1d2028
 font_family FiraCode Nerd Font
 font_size 25.0
-
+italic_font      Source Code Pro
+bold_italic_font Source Code Pro
 foreground #a9b1d6
 #background #1a1b26
 
