--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 set -s escape-time 0
 set -g status-style 'bg=#1d2028 fg=#5eacd3'
 
