--- a/.skhdrc
+++ b/.skhdrc
@@ -5,10 +5,10 @@ shift + alt - j               : yabai -m window --focus north
 shift + alt - l               : yabai -m window --focus east
 
 # Moving windows
-cmd + shift - h               : yabai -m window --warp west
-cmd + shift - k               : yabai -m window --warp south
-cmd + shift - j               : yabai -m window --warp north
-cmd + shift - l               : yabai -m window --warp east
+cmd + shift - h               : yabai -m window --swap west
+cmd + shift - k               : yabai -m window --swap south
+cmd + shift - j               : yabai -m window --swap north
+cmd + shift - l               : yabai -m window --swap east
 
 # Focus monitor
 ctrl + alt - i                : yabai -m display --focus prev
