Finished tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,29 @@
-set -g default-terminal "xterm-256color"
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc"
+
+set -g @plugin 'niksingh710/minimal-tmux-status'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'wfxr/tmux-fzf-url'
 
 set -s escape-time 0
-set -g status-style 'bg=#1d2028 fg=#5eacd3'
+set -g base-index 1
+set -g renumber-windows on
+
+set -g @minimal-tmux-bg "#e95678"
+set -g @minimal-tmux-justify "centre"
+set -g @minimal-tmux-indicator-str "  tmux  "
+set -g @minimal-tmux-indicator true
+set -g @minimal-tmux-status "bottom"
+set -g @minimal-tmux-right true
+set -g @minimal-tmux-left true
+set -g @minimal-tmux-expanded-icon " 󰊓 "
+
+
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
 
 setw -g mode-keys vi
 bind Enter copy-mode
@@ -19,3 +40,7 @@ bind -r l select-pane -R
 
 unbind C-b
 set-option -g prefix C-a
+run '~/.tmux/plugins/tpm/tpm'
+set -g status-bg default
+set -g status-style bg=default
+set-option -g status-style bg=default
