fixed coloring in tmux cnf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ set -s escape-time 0
 set -g base-index 1
 set -g renumber-windows on
 
+set -g pane-border-style "fg=#e95678"
+set -g pane-active-border-style "bg=default fg=#e95678"
+
 set -g @minimal-tmux-bg "#e95678"
 set -g @minimal-tmux-justify "centre"
 set -g @minimal-tmux-indicator-str "  tmux  "
@@ -20,7 +23,6 @@ set -g @minimal-tmux-status "bottom"
 set -g @minimal-tmux-right true
 set -g @minimal-tmux-left true
 set -g @minimal-tmux-expanded-icon " 󰊓 "
-
 
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
@@ -41,6 +43,3 @@ bind -r l select-pane -R
 unbind C-b
 set-option -g prefix C-a
 run '~/.tmux/plugins/tpm/tpm'
-set -g status-bg default
-set -g status-style bg=default
-set-option -g status-style bg=default
