--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
+# Set Terminal to fix colors
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
+# Plugins
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -8,13 +10,14 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
+# General Settings
 set -s escape-time 0
 set -g base-index 1
 set -g renumber-windows on
 
+# Theme
 set -g pane-border-style "fg=#e95678"
 set -g pane-active-border-style "bg=default fg=#e95678"
-
 set -g @minimal-tmux-bg "#e95678"
 set -g @minimal-tmux-justify "centre"
 set -g @minimal-tmux-indicator-str "  tmux  "
@@ -24,22 +27,25 @@ set -g @minimal-tmux-right true
 set -g @minimal-tmux-left true
 set -g @minimal-tmux-expanded-icon " 󰊓 "
 
+# Auto-Save
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
+# Keybindings
 setw -g mode-keys vi
 bind Enter copy-mode
 bind -n M-Enter copy-mode
-
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
-bind -r ^ last-window
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-
+bind C-t new-session
+bind q killp
+bind Q confirm-before -p "kill session #S? (y/n)" kill-session
 unbind C-b
 set-option -g prefix C-a
+
+# Load Plugins
 run '~/.tmux/plugins/tpm/tpm'
