--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,7 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 bind C-t new-session
-bind q killp
+bind q confirm-before -p "close window? (y/n)" killp
 bind Q confirm-before -p "kill session #S? (y/n)" kill-session
 unbind C-b
 set-option -g prefix C-a
