removed barbar aerial and added lspsaga and jabs

--- a/kitty.conf
+++ b/kitty.conf
@@ -7,7 +7,7 @@ italic_font      Source Code Pro
 bold_italic_font Source Code Pro
 foreground #a9b1d6
 #background #1a1b26
-
+window_padding_width 5 5 0 5
 # Black
 color0 #414868
 color8 #414868
