--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,5 +47,9 @@ bind Q confirm-before -p "kill session #S? (y/n)" kill-session
 unbind C-b
 set-option -g prefix C-a
 
+
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 # Load Plugins
 run '~/.tmux/plugins/tpm/tpm'
