sorted plugins out

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,12 @@
 # Set Terminal to fix colors
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color*:Tc"
+set-option -sa terminal-features ',xterm-kitty:RGB'
+set -ga terminal-overrides ",*256color*:Tc"
 
 # Plugins
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
 # General Settings
@@ -27,9 +26,6 @@ set -g @minimal-tmux-right true
 set -g @minimal-tmux-left true
 set -g @minimal-tmux-expanded-icon " 󰊓 "
 
-# Auto-Save
-set -g @continuum-restore 'on'
-set -g @resurrect-strategy-nvim 'session'
 
 # Keybindings
 setw -g mode-keys vi
