--- a/kitty.conf
+++ b/kitty.conf
@@ -2,6 +2,7 @@ hide_window_decorations titlebar-only
 #background #1a1c26
 background #1d2028
 font_family FiraCode Nerd Font
+cursor_blink_interval 0
 font_size 25.0
 italic_font      Source Code Pro
 bold_italic_font Source Code Pro
