edited tmux layout added fzf conf and changed kitty background color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,12 +18,12 @@ set -g renumber-windows on
 set -g pane-border-style "fg=#e95678"
 set -g pane-active-border-style "bg=default fg=#e95678"
 set -g @minimal-tmux-bg "#e95678"
-set -g @minimal-tmux-justify "centre"
+set -g @minimal-tmux-justify "left"
 set -g @minimal-tmux-indicator-str "  tmux  "
 set -g @minimal-tmux-indicator true
-set -g @minimal-tmux-status "bottom"
+set -g @minimal-tmux-status "top"
 set -g @minimal-tmux-right true
-set -g @minimal-tmux-left true
+set -g @minimal-tmux-left false
 set -g @minimal-tmux-expanded-icon " 󰊓 "
 
 
