--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,6 @@
 hide_window_decorations titlebar-only
 #background #1a1c26
-background #1d2028
+background #1D1F27
 font_family FiraCode Nerd Font
 cursor_blink_interval 0
 font_size 25.0
