--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Set Terminal to fix colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',xterm-kitty:RGB'
 set -ga terminal-overrides ",*256color*:Tc"
 
