Sorted zshrc added macos alt option in kitty and replaced telscope with fzf + edited dashboard and added keymap for config

--- a/kitty.conf
+++ b/kitty.conf
@@ -9,6 +9,7 @@ bold_italic_font Source Code Pro
 foreground #a9b1d6
 #background #1a1b26
 window_padding_width 5 5 0 5
+macos_option_as_alt left
 # Black
 color0 #414868
 color8 #414868
