--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,28 @@
+[color]
+    ui = auto
+
+[color "branch"]
+    current = yellow reverse
+    local = yellow
+    remote = green
+
+[color "diff"]
+    meta = yellow bold
+    frag = magenta bold
+    old = red
+    new = green
+
+[color "status"]
+    added = yellow
+    changed = green
+    untracked = cyan
+
 [push]
 	default = current
+    autoSetupRemote = true
+
+[pull]
+    rebase = true
 
 [core]
     editor = nvim
@@ -9,6 +32,7 @@
 
 [core]
     pager = delta
+    editor = vim
 
 [interactive]
     diffFilter = delta --color-only
