removed kitty added wezterm and changed nvim colorscheme to cyberdream

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,16 @@
 # Set Terminal to fix colors
-set -g default-terminal "tmux-256color"
-set-option -sa terminal-features ',xterm-kitty:RGB'
-set -ga terminal-overrides ",*256color*:Tc"
+set-option -g default-terminal "tmux-256color"
+set-option -sa terminal-features ',${TERM}:RGB'
+set -ga terminal-overrides ",${TERM}:Tc"
+set-option -ga terminal-features ",${TERM}:usstyle"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # Plugins
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'omerxx/tmux-sessionx'
 
 # General Settings
 set -s escape-time 0
@@ -15,9 +18,9 @@ set -g base-index 1
 set -g renumber-windows on
 
 # Theme
-set -g pane-border-style "fg=#e95678"
-set -g pane-active-border-style "bg=default fg=#e95678"
-set -g @minimal-tmux-bg "#e95678"
+set -g pane-border-style "fg=#bd5eff"
+set -g pane-active-border-style "bg=default fg=#bd5eff"
+set -g @minimal-tmux-bg "#5ef1ff"
 set -g @minimal-tmux-justify "left"
 set -g @minimal-tmux-indicator-str "  tmux  "
 set -g @minimal-tmux-indicator true
@@ -25,7 +28,25 @@ set -g @minimal-tmux-status "top"
 set -g @minimal-tmux-right true
 set -g @minimal-tmux-left false
 set -g @minimal-tmux-expanded-icon " 󰊓 "
+set -g status-fg white
+# thm_bg="#1e2124"
+# thm_fg="#ffffff"
+# thm_cyan="#5ef1ff"
+# thm_black="#3c4048"
+# thm_gray="#3c4048"
+# thm_magenta="#ff5ef1"
+# thm_pink="#ff5ea0"
+# thm_red="#ff6e5e"
+# thm_green="#5eff6c"
+# thm_yellow="#f1ff5e"
+# thm_blue="#5ea1ff"
+# thm_orange="#ffbd5e"
+# thm_black4="#7b8496"
 
+# SessionX Settings
+set -g @sessionx-zoxide-mode 'on'
+set -g @sessionx-window-height '90%'
+set -g @sessionx-window-width '75%'
 
 # Keybindings
 setw -g mode-keys vi
@@ -42,10 +63,6 @@ bind q confirm-before -p "close window? (y/n)" killp
 bind Q confirm-before -p "kill session #S? (y/n)" kill-session
 unbind C-b
 set-option -g prefix C-a
-
-
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # Load Plugins
 run '~/.tmux/plugins/tpm/tpm'
