--- a/.skhdrc
+++ b/.skhdrc
@@ -59,5 +59,5 @@ alt - q                       : yabai -m window --close
 # Float or unfloat a window
 alt - t                       : yabai -m window --toggle float
 
-# open Kitty
-alt - return                  : open -na kitty --args -1
+# open WezTerm
+alt - return                  : open -na wezterm
