refactored tmux and added cyberdream catppuccin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,10 +7,10 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # Plugins
-set -g @plugin 'niksingh710/minimal-tmux-status'
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'tmux-plugins/tpm'
 
 # General Settings
 set -s escape-time 0
@@ -18,30 +18,22 @@ set -g base-index 1
 set -g renumber-windows on
 
 # Theme
-set -g pane-border-style "fg=#bd5eff"
-set -g pane-active-border-style "bg=default fg=#bd5eff"
-set -g @minimal-tmux-bg "#5ef1ff"
-set -g @minimal-tmux-justify "left"
-set -g @minimal-tmux-indicator-str "  tmux  "
-set -g @minimal-tmux-indicator true
-set -g @minimal-tmux-status "top"
-set -g @minimal-tmux-right true
-set -g @minimal-tmux-left false
-set -g @minimal-tmux-expanded-icon " 󰊓 "
-set -g status-fg white
-# thm_bg="#1e2124"
-# thm_fg="#ffffff"
-# thm_cyan="#5ef1ff"
-# thm_black="#3c4048"
-# thm_gray="#3c4048"
-# thm_magenta="#ff5ef1"
-# thm_pink="#ff5ea0"
-# thm_red="#ff6e5e"
-# thm_green="#5eff6c"
-# thm_yellow="#f1ff5e"
-# thm_blue="#5ea1ff"
-# thm_orange="#ffbd5e"
-# thm_black4="#7b8496"
+set-option -g status-position top
+set -g @catppuccin_flavour 'cyberdream'
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator "  █"
+set -g @catppuccin_status_background "default"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#{pane_current_path}"
+
+set -g @catppuccin_status_modules_right "application user host session date_time"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
 
 # SessionX Settings
 set -g @sessionx-zoxide-mode 'on'
@@ -65,4 +57,4 @@ unbind C-b
 set-option -g prefix C-a
 
 # Load Plugins
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
