--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,12 +10,15 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tpm'
 
 # General Settings
 set -s escape-time 0
 set -g base-index 1
 set -g renumber-windows on
+set -g @continuum-restore 'on'
 
 # Theme
 set-option -g status-position top
