Edited Tmux Statusbar to use no plugins and added tmux-fzf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,41 +7,28 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # Plugins
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'omerxx/tmux-sessionx'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'sainnhe/tmux-fzf'
+
 
 # General Settings
 set -s escape-time 0
 set -g base-index 1
 set -g renumber-windows on
-set -g @continuum-restore 'on'
 
-# Theme
+# Style
 set-option -g status-position top
-set -g @catppuccin_flavour 'cyberdream'
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
-set -g @catppuccin_status_background "default"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-
-set -g @catppuccin_status_modules_right "application user host session date_time"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-# SessionX Settings
-set -g @sessionx-zoxide-mode 'on'
-set -g @sessionx-window-height '90%'
-set -g @sessionx-window-width '75%'
+set-option -g status-style bg=default
+set-option -g pane-border-style "bg=default fg=white"
+set-option -g pane-active-border-style "bg=default fg=cyan"
+set-option -g window-status-style bg=white,fg=black
+set-option -g window-status-format " #I:#W "
+set-option -g window-status-current-format " 󰫣 #I:#W "
+set-option -g status-left ""
+set-option -g status-right-length 80
+set-option -g status-right "#[fg=black,bg=white] 󰴠 #{pane_current_path} #[fg=default,bg=default] #[fg=black,bg=white]  #U #[fg=default,bg=default] #[fg=black,bg=white] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=white]#[fg=black]  #S }#[fg=default,bg=default] #[fg=black,bg=white]  %H:%M #[fg=default,bg=default] "
 
 # Keybindings
 setw -g mode-keys vi
