finalized tmux styling, added .gitmux.conf and edited wezterm fonz_size

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,12 +11,17 @@ set -g @plugin 'soyuka/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 
 # General Settings
 set -s escape-time 0
 set -g base-index 1
 set -g renumber-windows on
+set -g status-interval 1
+set -g @continuum-restore 'on'
 
 # Style
 set-option -g status-position top
@@ -24,11 +29,11 @@ set-option -g status-style bg=default
 set-option -g pane-border-style "bg=default fg=white"
 set-option -g pane-active-border-style "bg=default fg=cyan"
 set-option -g window-status-style bg=white,fg=black
-set-option -g window-status-format " #I:#W "
-set-option -g window-status-current-format " 󰫣 #I:#W "
-set-option -g status-left ""
+set-option -g window-status-format " #I: #W "
+set-option -g window-status-current-format " 󰫣 #I: #W "
 set-option -g status-right-length 80
-set-option -g status-right "#[fg=black,bg=white] 󰴠 #{pane_current_path} #[fg=default,bg=default] #[fg=black,bg=white]  #U #[fg=default,bg=default] #[fg=black,bg=white] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=white]#[fg=black]  #S }#[fg=default,bg=default] #[fg=black,bg=white]  %H:%M #[fg=default,bg=default] "
+set-option -g status-left ''
+set-option -g status-right "#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=black]#[bg=white]  #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=black]#[bg=white] #[fg=default]#[bg=default] ,}#[fg=black,bg=white]  #U #[fg=default,bg=default] #[fg=black,bg=white] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=white]#[fg=black]  #S }#[fg=default,bg=default] #[fg=black,bg=white]  %H:%M #[fg=default,bg=default] "
 
 # Keybindings
 setw -g mode-keys vi
@@ -40,9 +45,9 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-bind C-t new-session
+bind s run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh switch"
 bind q confirm-before -p "close window? (y/n)" killp
-bind Q confirm-before -p "kill session #S? (y/n)" kill-session
+bind Q run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh kill"
 unbind C-b
 set-option -g prefix C-a
 
