removed codesnap and flash, finalized tmux with pomodor spotify and keymaps and refactored wezconfig

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,9 @@ set -g @plugin 'soyuka/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'xamut/tmux-spotify'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
@@ -22,6 +25,8 @@ set -g base-index 1
 set -g renumber-windows on
 set -g status-interval 1
 set -g @continuum-restore 'on'
+set -g @pomodoro_sound 'Funk.aiff'
+set -g @pomodoro_granularity 'on'
 
 # Style
 set-option -g status-position top
@@ -33,9 +38,11 @@ set-option -g window-status-format " #I: #W "
 set-option -g window-status-current-format " 󰫣 #I: #W "
 set-option -g status-right-length 80
 set-option -g status-left ''
-set-option -g status-right "#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=black]#[bg=white]  #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=black]#[bg=white] #[fg=default]#[bg=default] ,}#[fg=black,bg=white]  #U #[fg=default,bg=default] #[fg=black,bg=white] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=white]#[fg=black]  #S }#[fg=default,bg=default] #[fg=black,bg=white]  %H:%M #[fg=default,bg=default] "
+set-option -g status-right "#{?#{pomodoro_status},#[fg=black]#[bg=white]#{pomodoro_status} #[bg=default] ,}#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=black]#[bg=white]  #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=black]#[bg=white] #[fg=default]#[bg=default] ,}#[fg=black,bg=white]  #U #[fg=default,bg=default] #[fg=black,bg=white] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=white]#[fg=black]  #S }#[fg=default,bg=default] #[fg=black,bg=white]  %H:%M #[fg=default,bg=default] "
 
 # Keybindings
+unbind C-b
+set-option -g prefix C-a
 setw -g mode-keys vi
 bind Enter copy-mode
 bind -n M-Enter copy-mode
@@ -45,11 +52,9 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-bind s run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh switch"
+bind b run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh switch"
 bind q confirm-before -p "close window? (y/n)" killp
 bind Q run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh kill"
-unbind C-b
-set-option -g prefix C-a
 
 # Load Plugins
 run '~/.config/tmux/plugins/tpm/tpm'
