edited gitmux colors

--- a/.gitmux.conf
+++ b/.gitmux.conf
@@ -36,7 +36,7 @@ tmux:
         # Local branch name
         branch: "#[fg=black]"
         # 'divergence' counts
-        divergence: "#[fg=yellow]"
+        divergence: "#[fg=black]"
         # 'staged' count
         staged: "#[fg=green,bold]"
         # 'conflicts' count
