Sorted out some plugins and tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,8 +31,8 @@ set -g @pomodoro_granularity 'on'
 # Style
 set-option -g status-position top
 set-option -g status-style bg=default
-set-option -g pane-border-style "bg=default fg=white"
-set-option -g pane-active-border-style "bg=default fg=cyan"
+set-option -g pane-border-style "bg=default, fg=white"
+set-option -g pane-active-border-style "bg=default, fg=white"
 set-option -g window-status-style bg=white,fg=black
 set-option -g window-status-format " #I: #W "
 set-option -g window-status-current-format " 󰫣 #I: #W "
