refactored some plugins, edited tmux statusbar, gitmux colors and fixed some typos

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,12 +33,13 @@ set-option -g status-position top
 set-option -g status-style bg=default
 set-option -g pane-border-style "bg=default, fg=white"
 set-option -g pane-active-border-style "bg=default, fg=white"
-set-option -g window-status-style bg=white,fg=black
+set-option -g window-status-style bg=default,fg=white
+# set-option -g window-status-style bg=white,fg=black
 set-option -g window-status-format " #I: #W "
 set-option -g window-status-current-format " 󰫣 #I: #W "
 set-option -g status-right-length 80
 set-option -g status-left ''
-set-option -g status-right "#{?#{pomodoro_status},#[fg=black]#[bg=white]#{pomodoro_status} #[bg=default] ,}#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=black]#[bg=white]  #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=black]#[bg=white] #[fg=default]#[bg=default] ,}#[fg=black,bg=white]  #U #[fg=default,bg=default] #[fg=black,bg=white] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=white]#[fg=black]  #S }#[fg=default,bg=default] #[fg=black,bg=white]  %H:%M #[fg=default,bg=default] "
+set-option -g status-right "#{?#{pomodoro_status},#[fg=default]#[bg=default]#{pomodoro_status} #[bg=default] ,}#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=default]#[bg=default] #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=default]#[bg=default] #[fg=default]#[bg=default] ,}#[fg=default,bg=default]  #U #[fg=default,bg=default] #[fg=default,bg=default] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=default]#[fg=default]  #S }#[fg=default,bg=default] #[fg=default,bg=default]  %H:%M #[fg=default,bg=default] "
 
 # Keybindings
 unbind C-b
