--- a/.gitmux.conf
+++ b/.gitmux.conf
@@ -32,27 +32,27 @@ tmux:
     # https://man7.org/linux/man-pages/man1/tmux.1.html#STYLES.
     styles:
         # Special tree state strings such as [rebase], [merge], etc.
-        state: "#[fg=red,bold]"
+        state: "#[fg=white,bold]"
         # Local branch name
-        branch: "#[fg=black]"
+        branch: "#[fg=white]"
         # 'divergence' counts
-        divergence: "#[fg=black]"
+        divergence: "#[fg=white]"
         # 'staged' count
-        staged: "#[fg=green,bold]"
+        staged: "#[fg=white,bold]"
         # 'conflicts' count
-        conflict: "#[fg=orange,bold]"
+        conflict: "#[fg=white,bold]"
         # 'modified' count
-        modified: "#[fg=red,bold]"
+        modified: "#[fg=white,bold]"
         # 'untracked' count
-        untracked: "#[fg=magenta,bold]"
+        untracked: "#[fg=white,bold]"
         # 'stash' count
-        stashed: "#[fg=cyan,bold]"
+        stashed: "#[fg=white,bold]"
         # 'insertions' count
-        insertions: "#[fg=green]"
+        insertions: "#[fg=white]"
         # 'deletions' count
-        deletions: "#[fg=red]"
+        deletions: "#[fg=white]"
         # 'clean' symbol
-        clean: "#[fg=green,bold]"
+        clean: "#[fg=white,bold]"
 
     # The layout section defines what components gitmux shows and the order in
     # which they appear on tmux status bar.
