added tmux-sessionizer, delete dropbar + noice + notify + spacemen, and some refactoring

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,10 +12,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
-set -g @plugin 'xamut/tmux-spotify'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 
@@ -24,9 +20,6 @@ set -s escape-time 0
 set -g base-index 1
 set -g renumber-windows on
 set -g status-interval 1
-set -g @continuum-restore 'on'
-set -g @pomodoro_sound 'Funk.aiff'
-set -g @pomodoro_granularity 'on'
 
 # Style
 set-option -g status-position top
@@ -34,12 +27,11 @@ set-option -g status-style bg=default
 set-option -g pane-border-style "bg=default, fg=white"
 set-option -g pane-active-border-style "bg=default, fg=white"
 set-option -g window-status-style bg=default,fg=white
-# set-option -g window-status-style bg=white,fg=black
 set-option -g window-status-format " #I: #W "
 set-option -g window-status-current-format " 󰫣 #I: #W "
 set-option -g status-right-length 80
 set-option -g status-left ''
-set-option -g status-right "#{?#{pomodoro_status},#[fg=default]#[bg=default]#{pomodoro_status} #[bg=default] ,}#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=default]#[bg=default] #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=default]#[bg=default] #[fg=default]#[bg=default] ,}#[fg=default,bg=default]  #U #[fg=default,bg=default] #[fg=default,bg=default] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=default]#[fg=default]  #S }#[fg=default,bg=default] #[fg=default,bg=default]  %H:%M #[fg=default,bg=default] "
+set-option -g status-right "#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=default]#[bg=default] #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=default]#[bg=default] #[fg=default]#[bg=default] ,}#[fg=default,bg=default]  #U #[fg=default,bg=default] #[fg=default,bg=default] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=default]#[fg=default]  #S }#[fg=default,bg=default] #[fg=default,bg=default]  %H:%M #[fg=default,bg=default] "
 
 # Keybindings
 unbind C-b
@@ -53,7 +45,8 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-bind b run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh switch"
+bind s run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh switch"
+bind -r H run-shell "~/.local/scripts/tmux-sessionizer ~/source/dot"
 bind q confirm-before -p "close window? (y/n)" killp
 bind Q run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh kill"
 
