removed all tmux plugins, and edited tmux-sessionizer fzf --reverse

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,17 +6,8 @@ set-option -ga terminal-features ",${TERM}:usstyle"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
-# Plugins
-set -g @plugin 'soyuka/tmux-current-pane-hostname'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-
-
 # General Settings
-set -s escape-time 0
+set -sg escape-time 0
 set -g base-index 1
 set -g renumber-windows on
 set -g status-interval 1
@@ -31,7 +22,7 @@ set-option -g window-status-format " #I: #W "
 set-option -g window-status-current-format " 󰫣 #I: #W "
 set-option -g status-right-length 80
 set-option -g status-left ''
-set-option -g status-right "#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=default]#[bg=default] #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=default]#[bg=default] #[fg=default]#[bg=default] ,}#[fg=default,bg=default]  #U #[fg=default,bg=default] #[fg=default,bg=default] 󰩠 #H #[fg=default,bg=default] #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=default]#[fg=default]  #S }#[fg=default,bg=default] #[fg=default,bg=default]  %H:%M #[fg=default,bg=default] "
+set-option -g status-right "#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=default]#[bg=default] #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=default]#[bg=default] ,} #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=default]#[fg=default]  #S }#[fg=default,bg=default] #[fg=default,bg=default]  %H:%M #[fg=default,bg=default] "
 
 # Keybindings
 unbind C-b
@@ -45,10 +36,7 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-bind s run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh switch"
 bind -r H run-shell "~/.local/scripts/tmux-sessionizer ~/source/dot"
+bind s display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header-first --header 'Session Switcher' | xargs tmux switch-client -t"
+bind Q display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header-first --header 'Session Killer' | xargs tmux kill-session -t"
 bind q confirm-before -p "close window? (y/n)" killp
-bind Q run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh kill"
-
-# Load Plugins
-run '~/.config/tmux/plugins/tpm/tpm'
