--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,5 +38,7 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 bind -r H run-shell "~/.local/scripts/tmux-sessionizer ~/source/dot"
 bind s display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header-first --header 'Session Switcher' | xargs tmux switch-client -t"
+bind f display-popup -E "find ~/source -mindepth 1 -maxdepth 1 -type d | fzf --reverse --header-first --header 'Open Project' | xargs -I {} sh -c 'session_name=\$(basename {}); tmux new-session -d -s \$session_name; tmux switch-client -t \$session_name'"
+bind H run-shell "tmux has-session -t dot 2>/dev/null || tmux new-session -d -s dot -c ~/source/dot; tmux switch-client -t dot"
 bind Q display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header-first --header 'Session Killer' | xargs tmux kill-session -t"
 bind q confirm-before -p "close window? (y/n)" killp
