changed lazygit config

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -29,4 +29,4 @@ git:
     paging:
         colorArg: always
         pager: delta --dark --paging=never
-        useConfig: true
+        # useConfig: true
