tmux: change active window icon

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,8 +18,8 @@ set-option -g status-style bg=default
 set-option -g pane-border-style "bg=default, fg=white"
 set-option -g pane-active-border-style "bg=default, fg=white"
 set-option -g window-status-style bg=default,fg=white
-set-option -g window-status-format " #I: #W "
-set-option -g window-status-current-format "  #I: #W "
+set-option -g window-status-format " #I > #W "
+set-option -g window-status-current-format "  #I > #W "
 set-option -g status-right-length 80
 set-option -g status-left ''
 set-option -g status-right "#{?#(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}'),#[fg=default]#[bg=default] #(gitmux -cfg $HOME/.gitmux.conf '#{pane_current_path}')#[fg=default]#[bg=default] ,} #{?client_prefix,#[bg=cyan]#[fg=black]  #S ,#[bg=default]#[fg=default]  #S }#[fg=default,bg=default] #[fg=default,bg=default]  %H:%M #[fg=default,bg=default] "
