tmux: fix new session and project

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,5 +41,5 @@ bind H run-shell "tmux has-session -t dot 2>/dev/null || tmux new-session -d -s 
 bind Q display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header-first --header 'Session Killer' | xargs tmux kill-session -t"
 bind q confirm-before -p "close window? (y/n)" killp
 bind f display-popup -E "find ~/source -name .git -maxdepth 3 -type d -prune | sed 's|/\.git||' | fzf --reverse --header-first --header 'Open Project' | xargs -I {} sh -c 'session_name=\$(basename {}); tmux new-session -d -s \$session_name -c {}; tmux switch-client -t \$session_name'"
-bind N display-popup -h 10% -w 20% -E "read -p 'Enter project name: ' project_name; mkdir -p ~/source/\$project_name; git init ~/source/\$project_name; tmux new-session -d -s \$project_name -c ~/source/\$project_name; tmux switch-client -t \$project_name"
-bind S display-popup -h 10% -w 20% -E "read -p 'Enter session name: ' session_name; tmux new-session -d -s \$session_name -c ~; tmux switch-client -t \$session_name"
+bind N display-popup -h 10% -w 20% -E "bash -c 'read -p \"Enter project name: \" project_name; mkdir -p ~/source/\$project_name; git init ~/source/\$project_name; tmux new-session -d -s \$project_name -c ~/source/\$project_name; tmux switch-client -t \$project_name'"
+bind S display-popup -h 10% -w 20% -E "bash -c 'read -p \"Enter session name: \" session_name; tmux new-session -d -s \$session_name  -c ~; tmux switch-client -t \$session_name'"
