--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,8 +15,8 @@ set -g status-interval 1
 # Style
 set-option -g status-position top
 set-option -g status-style bg=default
-set-option -g pane-border-style "bg=default, fg=white"
-set-option -g pane-active-border-style "bg=default, fg=white"
+set-option -g pane-border-style "bg=default, fg=#3c4048"
+set-option -g pane-active-border-style "bg=default, fg=#3c4048"
 set-option -g window-status-style bg=default,fg=white
 set-option -g window-status-format "#W "
 set-option -g window-status-current-format " #W "
